opam-version: "2.0"
name: "ag_logger"
synopsis: "Simple logger based on Logs by Daniel Bünzli"
description: "Simple logger based on Logs by Daniel Bünzli"
version: "v0.1.0"
maintainer: "Pavel Argentov <argentoff@gmail.com>"
authors: "Pavel Argentov <argentoff@gmail.com>"
license: "Unlicense"
homepage: "https://github.com/argent-smith/logger"
dev-repo: "git+https://github.com/argent-smith/logger"
bug-reports: "https://github.com/argent-smith/logger/issues"
build: [
  [ "dune" "subst" ] { pinned }
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml" { >= "4.04" }
  "dune" { >= "1.1.1" }
  "lwt"
  "fmt"
  "ptime"
  "logs"
  "cmdliner"
  "merlin"
]
