opam-version: "2.0"
name: "ag_logger"
synopsis: "Lwt logger based on Logs by Daniel Bünzli"
description: "Custom Lwt logger with process/time based on Logs by Daniel Bünzli"
version: "~dev"
maintainer: "Pavel Argentov <argentoff@gmail.com>"
authors: "Pavel Argentov <argentoff@gmail.com>"
license: "Unlicense"
homepage: "https://github.com/argent-smith/logger"
dev-repo: "git+https://github.com/argent-smith/logger"
bug-reports: "https://github.com/argent-smith/logger/issues"
build: [
  [ "dune" "subst" ] { pinned }
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml" { >= "4.04" }
  "dune" { >= "1.1.1" }
  "base" {build}
  "ppx_jane" {build}
  "lwt" {build}
  "fmt" {build}
  "ptime" {build}
  "logs" {build}
  "cmdliner" {build}
  "merlin" {post}
  "ocaml-lsp-server" {post}
  "ocamlformat" {post}
  "utop" {post}
]
