opam-version: "2.0"
name: "logger"
version: "v0.1.0"
maintainer: "Pavel Argentov <argentoff@gmail.com>"
authors: "Pavel Argentov <argentoff@gmail.com>"
license: "ISC"
homepage: "https://github.com/argent-smith/logger"
dev-repo: "git+https://github.com/argent-smith/logger"
bug-reports: "https://github.com/argent-smith/logger/issues"
build: [
  [ "dune" "subst" ] { pinned }
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml" { >= "4.04" }
  "dune" { >= "1.1.1" }
  "lwt"
  "lwt_ppx"
  "fmt"
  "ptime"
  "logs"
  "cmdliner"
]
