;; -*- tuareg-dune -*-

(library
 (name logger)
 (public_name ag_logger)
 (wrapped false)
 (libraries cmdliner
            ptime
            ptime.clock.os
            fmt
            fmt.tty
            logs
            logs.fmt
            logs.lwt)
 (preprocess (pps lwt_ppx))
 (flags (-safe-string))
 (ocamlopt_flags (-O2 -safe-string)))
