;; -*- tuareg-dune -*-

(library
 (name ag_logger)
 (public_name ag_logger)
 (wrapped false)
 (libraries lwt
            lwt.unix
            cmdliner
            ptime
            ptime.clock.os
            fmt
            fmt.tty
            logs
            logs.fmt
            logs.lwt)
 (flags (-safe-string))
 (ocamlopt_flags (-O2 -safe-string)))
