(library
 (name ag_logger)
 (public_name ag_logger)
 (libraries lwt
            lwt.unix
            cmdliner
            ptime
            ptime.clock.os
            fmt
            fmt.tty
            logs)
 (flags (-safe-string))
 (preprocess (pps ppx_jane))
 (ocamlopt_flags (-O2 -safe-string)))
